--- a/RecrutingAssistant/MainWindow.xaml
+++ b/RecrutingAssistant/MainWindow.xaml
@@ -3,10 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RecrutingAssistant"
+        xmlns:local="clr-namespace:RecrutingAssistantApp"
         mc:Ignorable="d"
         Title="RecrutingApp" Height="461.904" Width="847.619" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
@@ -19,11 +20,80 @@
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="70"/>
-            <ColumnDefinition Width="327*"/>
-            <ColumnDefinition Width="35*"/>
+            <ColumnDefinition Width="80"/>
+            <ColumnDefinition Width="229*"/>
+            <ColumnDefinition Width="25*"/>
         </Grid.ColumnDefinitions>
-        <StatusBar Name="statusBar" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Margin="1,0" VerticalAlignment="Bottom" Height="30" Grid.Row="8">
+        <DataGrid Name="dgTypeOfWork" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <DataGrid Name="dgJobSeeker" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <DataGrid Name="dgEmployer" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <DataGrid Name="dgPosition" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <DataGrid Name="dgDeal" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <Button Name="btnAdd" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="1" Margin="7,3,8,3" Click="btnAdd_Click"/>
+        <Button Name="btnRefresh" Content="Обновить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="2" Margin="7,3,8,3" Click="btnRefresh_Click"/>
+        <Button Name="btnDelete" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="3" Margin="7,3,8,3" Click="btnDelete_Click"/>
+        <Button Name="btnEdit" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="4" Margin="7,3,8,3" Click="btnEdit_Click"/>
+        <Button Name="btnSearch" Content="Поиск" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="5" Margin="7,3,8,3"/>
+        <StackPanel Grid.Column="0" Orientation="Vertical" Grid.ColumnSpan="1" VerticalAlignment="Center" Height="45" Grid.Row="1" Margin="0,3">
+            <Button HorizontalAlignment="Center" x:Name="btnTypeOfWork" VerticalAlignment="Center" Height="45" Width="70">
+                <Button.ToolTip>
+                    <TextBlock><Run Text="Таблица видов работ"/></TextBlock>
+                </Button.ToolTip>
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" Margin="1" FontSize="12"><Run Text="Типы работ"/></TextBlock>
+                </StackPanel>
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Orientation="Vertical" Grid.ColumnSpan="1" VerticalAlignment="Center" Height="45" Grid.Row="2" Margin="0,3">
+            <Button HorizontalAlignment="Center" x:Name="btnJobSeeker" VerticalAlignment="Center" Height="45" Width="70">
+                <Button.ToolTip>
+                    <TextBlock><Run Text="Таблица соискателей"/></TextBlock>
+                </Button.ToolTip>
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" Margin="1" FontSize="12"><Run Text="Соискатели"/></TextBlock>
+                </StackPanel>
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Orientation="Vertical" Grid.ColumnSpan="1" VerticalAlignment="Center" Height="45" Grid.Row="3" Margin="0,3">
+            <Button HorizontalAlignment="Center" x:Name="btnEmployer" VerticalAlignment="Center" Height="45" Width="70">
+                <Button.ToolTip>
+                    <TextBlock><Run Text="Таблица работодателей"/></TextBlock>
+                </Button.ToolTip>
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" Margin="1" FontSize="10"><Run Text="Работодатели"/></TextBlock>
+                </StackPanel>
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Orientation="Vertical" Grid.ColumnSpan="1" VerticalAlignment="Center" Height="45" Grid.Row="4" Margin="0,3">
+            <Button HorizontalAlignment="Center" x:Name="btnPosition" VerticalAlignment="Center" Height="45" Width="70">
+                <Button.ToolTip>
+                    <TextBlock><Run Text="Таблица вакансий"/></TextBlock>
+                </Button.ToolTip>
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" Margin="1" FontSize="14"><Run Text="Вакансии"/></TextBlock>
+                </StackPanel>
+            </Button>
+        </StackPanel>
+        <StackPanel Grid.Column="0" Orientation="Vertical" Grid.ColumnSpan="1" VerticalAlignment="Center" Height="45" Grid.Row="5" Margin="0,3">
+            <Button HorizontalAlignment="Center" x:Name="btnDeal" VerticalAlignment="Center" Height="45" Width="70">
+                <Button.ToolTip>
+                    <TextBlock><Run Text="Таблица сделок"/></TextBlock>
+                </Button.ToolTip>
+                <StackPanel>
+                    <TextBlock HorizontalAlignment="Center" Margin="1" FontSize="14"><Run Text="Сделки"/></TextBlock>
+                </StackPanel>
+            </Button>
+        </StackPanel>
+        <Menu Height="25" HorizontalAlignment="Stretch" Name="mainMenu" VerticalAlignment="Top" Grid.ColumnSpan="3">
+            <MenuItem Name="DataBase" Header="База данных">
+                <MenuItem Name="dataBaseS" Header="Настроить соединение с базой данных" ></MenuItem>
+            </MenuItem>
+            <MenuItem Name="Reports" Header="Отчеты">
+                <MenuItem Name="ExcelExporterButton" Header="Экспорт таблицы Excel"/>
+            </MenuItem>
+            <MenuItem Name="About" Header="О программе"></MenuItem>
+        </Menu>
+        <StatusBar Name="statusBar" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Margin="1,0" VerticalAlignment="Bottom" Height="30" Grid.Row="7" Grid.RowSpan="2">
             <Label Name="statusLabel" Content="Работа с таблицей:" Visibility="Visible"></Label>
         </StatusBar>
     </Grid>
