--- a/RecrutingAssistant/AddTypeOfWorkWindow.xaml
+++ b/RecrutingAssistant/AddTypeOfWorkWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RecrutingAssistantApp"
         mc:Ignorable="d"
-        Title="AddTypeOfWorkWindow" Height="90" Width="315.333">
+        Title="Типы работ" Height="90" Width="315.333" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150"/>
@@ -16,9 +16,9 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Название работы" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <TextBlock Text="Название работы" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
         <TextBox Name="tbName" Grid.Row="0" Grid.Column="1" Margin="3"/>
-        <Button Name="btnSave" HorizontalAlignment="Stretch" Grid.Row="5" Grid.Column="0" Content="Сохранить" Margin="3"/>
-        <Button Name="btnCancel" HorizontalAlignment="Stretch" Grid.Row="5" Grid.Column="1" Content="Сохранить" Margin="3"/>
+        <Button Name="btnSave" HorizontalAlignment="Stretch" Grid.Row="5" Grid.Column="0" Content="Сохранить" Margin="3" Click="btnSave_Click"/>
+        <Button Name="btnCancel" HorizontalAlignment="Stretch" Grid.Row="5" Grid.Column="1" Content="Отмена" Margin="3" Click="btnCancel_Click"/>
     </Grid>
 </Window>
