--- a/RecrutingAssistant/AddJobSeekerWindow.xaml
+++ b/RecrutingAssistant/AddJobSeekerWindow.xaml
@@ -5,8 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RecrutingAssistantApp"
         mc:Ignorable="d"
-        Title="AddJobSeekerWindow" Height="450" Width="800">
+        Title="Соискатель" Height="280" Width="365" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="180"/>
+            <ColumnDefinition Width="180"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Label Content="Имя" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="180" Grid.Column="0" Grid.Row="0"/>
+        <TextBox Name="tbFirstName" Grid.Row="0" Grid.Column="1" Width="175" Margin="0,3,0,3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Label Content="Фамилия" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="180" Grid.Column="0" Grid.Row="1"/>
+        <TextBox Name="tbSecondName" Grid.Row="1" Grid.Column="1" Width="175" Margin="0,3,0,3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Label Content="Отчество" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="180" Grid.Column="0" Grid.Row="2"/>
+        <TextBox Name="tbThirdName" Grid.Row="2" Grid.Column="1" Width="175" Margin="0,3,0,3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Label Content="Квалификация" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="180" Grid.Column="0" Grid.Row="3"/>
+        <TextBox Name="tbQualification" Grid.Row="3" Grid.Column="1" Width="175" Margin="0,3,0,3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Label Content="Предполагаемая зарплата" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="180" Grid.Column="0" Grid.Row="4"/>
+        <TextBox Name="tbAssumedSalary" Grid.Row="4" Grid.Column="1" Width="175" Margin="0,3,0,3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Label Content="Прочая информация" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="180" Grid.Column="0" Grid.Row="5"/>
+        <TextBox Name="tbMisc" Grid.Row="5" Grid.Column="1" Width="175" Margin="0,3,0,3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Label Content="Тип работы" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="180" Grid.Column="0" Grid.Row="6"/>
+        <ComboBox Name="cbTypeOfWork" HorizontalAlignment="Stretch" VerticalAlignment="Center"  Width="175" Grid.Column="1" Grid.Row="6" ItemsSource="{Binding}" DisplayMemberPath="TypeOfWork"/>
+        <Label Content="" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="180" Grid.Column="0" Grid.Row="7"/>
+        <Button Name="btnSave" Content="Сохранить" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="120" Grid.Column="0" Grid.Row="8" Click="btnSave_Click"/>
+        <Button Name="btnCancel" Content="Отмена" HorizontalAlignment="Center"  VerticalAlignment="Center" Width="120" Grid.Column="1" Grid.Row="8" Click="btnCancel_Click"/>
     </Grid>
 </Window>
