--- a/RecrutingAssistant/MainWindow.xaml
+++ b/RecrutingAssistant/MainWindow.xaml
@@ -15,25 +15,25 @@
             <RowDefinition Height="55"/>
             <RowDefinition Height="55"/>
             <RowDefinition Height="55"/>
-            <RowDefinition Height="44"/>
-            <RowDefinition Height="58"/>
+            <RowDefinition Height="55"/>
+            <RowDefinition Height="55"/>
             <RowDefinition Height="28"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="88"/>
-            <ColumnDefinition Width="332*"/>
-            <ColumnDefinition Width="45*"/>
+            <ColumnDefinition Width="655*"/>
+            <ColumnDefinition Width="102*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid Name="dgTypeOfWork" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <DataGrid Name="dgJobSeeker" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <DataGrid Name="dgEmployer" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <DataGrid Name="dgPosition" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <DataGrid Name="dgTypeOfWork" VerticalAlignment="Top" Grid.RowSpan="6" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <DataGrid Name="dgJobSeeker" VerticalAlignment="Top" Grid.RowSpan="6" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <DataGrid Name="dgEmployer" VerticalAlignment="Top" Grid.RowSpan="6" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
+        <DataGrid Name="dgPosition" VerticalAlignment="Top" Grid.RowSpan="6" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
         <DataGrid Name="dgDeal" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <Button Name="btnAdd" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="1"  Click="btnAdd_Click" Margin="16,5,14,5"/>
-        <Button Name="btnRefresh" Content="Обновить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="2"  Click="btnRefresh_Click" Margin="16,5,14,5"/>
-        <Button Name="btnDelete" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="3"  Click="btnDelete_Click" Margin="16,5,14,5"/>
-        <Button Name="btnEdit" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="4"  Click="btnEdit_Click" Margin="16,5,14,5"/>
-        <Button Name="btnSearch" Content="Поиск" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="5" Margin="16,5,14,5"/>
+        <Button Name="btnAdd" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="1"  Click="btnAdd_Click" Margin="23,5,19,5"/>
+        <Button Name="btnRefresh" Content="Обновить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="2"  Click="btnRefresh_Click" Margin="23,5,19,5"/>
+        <Button Name="btnDelete" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="3"  Click="btnDelete_Click" Margin="23,5,19,5"/>
+        <Button Name="btnEdit" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="4"  Click="btnEdit_Click" Margin="23,5,19,5"/>
+        <Button Name="btnSearch" Content="Поиск" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="5" Margin="23,5,19,5"/>
         <StackPanel Grid.Column="0" Orientation="Vertical" Grid.ColumnSpan="1" VerticalAlignment="Center" Height="45" Grid.Row="1" Margin="0,5">
             <Button HorizontalAlignment="Center" x:Name="btnTypeOfWork" VerticalAlignment="Center" Height="45" Width="70" Click="btnTypeOfWork_Click">
                 <Button.ToolTip>
@@ -86,7 +86,7 @@
         </StackPanel>
         <Menu Height="25" HorizontalAlignment="Stretch" Name="mainMenu" VerticalAlignment="Top" Grid.ColumnSpan="3">
             <MenuItem Name="DataBase" Header="База данных">
-                <MenuItem Name="dataBaseS" Header="Настроить соединение с базой данных" Checked="btnDatabase_Click" ></MenuItem>
+                <MenuItem Name="dataBaseS" Header="Настроить соединение с базой данных" Click="btnDatabase_Click" ></MenuItem>
             </MenuItem>
             <MenuItem Name="Reports" Header="Отчеты">
                 <MenuItem Name="ExcelExporterButton" Header="Экспорт таблицы Excel"/>
