--- a/RecrutingAssistant/MainWindow.xaml
+++ b/RecrutingAssistant/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RecrutingAssistantApp"
         mc:Ignorable="d"
-        Title="RecrutingApp" Height="461.904" Width="850.619" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="RecrutingApp" Height="461.904" Width="1300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -21,19 +21,59 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="88"/>
-            <ColumnDefinition Width="655*"/>
-            <ColumnDefinition Width="102*"/>
+            <ColumnDefinition Width="123*"/>
+            <ColumnDefinition Width="11*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid Name="dgTypeOfWork" VerticalAlignment="Top" Grid.RowSpan="6" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <DataGrid Name="dgJobSeeker" VerticalAlignment="Top" Grid.RowSpan="6" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <DataGrid Name="dgEmployer" VerticalAlignment="Top" Grid.RowSpan="6" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <DataGrid Name="dgPosition" VerticalAlignment="Top" Grid.RowSpan="6" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <DataGrid Name="dgDeal" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden"/>
-        <Button Name="btnAdd" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="1"  Click="btnAdd_Click" Margin="23,5,19,5"/>
-        <Button Name="btnRefresh" Content="Обновить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="2"  Click="btnRefresh_Click" Margin="23,5,19,5"/>
-        <Button Name="btnDelete" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="3"  Click="btnDelete_Click" Margin="23,5,19,5"/>
-        <Button Name="btnEdit" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="4"  Click="btnEdit_Click" Margin="23,5,19,5"/>
-        <Button Name="btnSearch" Content="Поиск" HorizontalAlignment="Center" VerticalAlignment="Center"  Width="60" Height="45" Grid.Column="2" Grid.Row="5" Margin="23,5,19,5"/>
+        <DataGrid Name="dgTypeOfWork" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" Binding="{Binding Path=WorkID}"/>
+                <DataGridTextColumn Header="Название" Binding="{Binding Path=Name}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid Name="dgJobSeeker" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" Binding="{Binding Path=SeekerID}"/>
+                <DataGridTextColumn Header="Имя" Binding="{Binding Path=FirstName}"/>
+                <DataGridTextColumn Header="Фамилия" Binding="{Binding Path=SecondName}"/>
+                <DataGridTextColumn Header="Отчество" Binding="{Binding Path=ThirdName}"/>
+                <DataGridTextColumn Header="Квалификация" Binding="{Binding Path=Qualification}"/>
+                <DataGridTextColumn Header="Предполагаемая З/П" Binding="{Binding Path=AssumedSalary}"/>
+                <DataGridTextColumn Header="Прочее" Binding="{Binding Path=Misc}"/>
+                <DataGridTextColumn Header="Тип работы" Binding="{Binding Path=Work.Name}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid Name="dgEmployer" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" Binding="{Binding Path=EmployerID}"/>
+                <DataGridTextColumn Header="Имя" Binding="{Binding Path=Name}"/>
+                <DataGridTextColumn Header="Адрес" Binding="{Binding Path=Address}"/>
+                <DataGridTextColumn Header="Номер телефона" Binding="{Binding Path=PhoneNumber}"/>
+                <DataGridTextColumn Header="Тип работы" Binding="{Binding Path=Work.Name}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid Name="dgPosition" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" Binding="{Binding Path=PositionID}"/>
+                <DataGridTextColumn Header="Название" Binding="{Binding Path=PositionName}"/>
+                <DataGridTextColumn Header="Открытость" Binding="{Binding Path=IsOpen}"/>
+                <DataGridTextColumn Header="Зарплата" Binding="{Binding Path=Salary}"/>
+                <DataGridTextColumn Header="Работодатель" Binding="{Binding Path=Employer.Name}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid Name="dgDeal" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id" Binding="{Binding Path=DealID}"/>
+                <DataGridTextColumn Header="Соискатель" Binding="{Binding Path=Seeker.SecondName}"/>
+                <DataGridTextColumn Header="Вакансия" Binding="{Binding Path=Position.PositionName}"/>
+                <DataGridTextColumn Header="Дата сделки" Binding="{Binding Path=DateOfDeal}"/>
+                <DataGridTextColumn Header="Комиссионные" Binding="{Binding Path=Commission}"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button Name="btnAdd" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="1"  Click="btnAdd_Click" Width="60"  />
+        <Button Name="btnRefresh" Content="Обновить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="2"  Click="btnRefresh_Click"  Width="60"/>
+        <Button Name="btnDelete" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="3"  Click="btnDelete_Click"  Width="60"/>
+        <Button Name="btnEdit" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="4"  Click="btnEdit_Click" Width="60" />
+        <Button Name="btnSearch" Content="Поиск" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="5" Width="60"/>
         <StackPanel Grid.Column="0" Orientation="Vertical" Grid.ColumnSpan="1" VerticalAlignment="Center" Height="45" Grid.Row="1" Margin="0,5">
             <Button HorizontalAlignment="Center" x:Name="btnTypeOfWork" VerticalAlignment="Center" Height="45" Width="70" Click="btnTypeOfWork_Click">
                 <Button.ToolTip>
