--- a/RecrutingAssistant/AddTypeOfWorkWindow.xaml
+++ b/RecrutingAssistant/AddTypeOfWorkWindow.xaml
@@ -5,20 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RecrutingAssistantApp"
         mc:Ignorable="d"
-        Title="Типы работ" Height="90" Width="315.333" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+        Title="Типы работ" Height="92.666" Width="324" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="155"/>
+            <ColumnDefinition Width="155"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" MinHeight="22"/>
+            <RowDefinition Height="Auto" MinHeight="4"/>
+            <RowDefinition Height="Auto" MinHeight="29"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Название работы" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
-        <TextBox Name="tbName" Grid.Row="0" Grid.Column="1" Margin="3"/>
-        <Button Name="btnSave" HorizontalAlignment="Stretch" Grid.Row="5" Grid.Column="0" Content="Сохранить" Margin="3" Click="btnSave_Click"/>
-        <Button Name="btnCancel" HorizontalAlignment="Stretch" Grid.Row="5" Grid.Column="1" Content="Отмена" Margin="3" Click="btnCancel_Click"/>
+        <TextBlock Text="Название работы" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="16" />
+        <TextBox Name="tbName" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center" Width="150" VerticalAlignment="Center" Height="18" Margin="0,2,0,3"/>
+        <Button Name="btnSave" HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="0" Content="Сохранить" Margin="3" Click="btnSave_Click"/>
+        <Button Name="btnCancel" HorizontalAlignment="Stretch" Grid.Row="2" Grid.Column="1" Content="Отмена" Margin="3" Click="btnCancel_Click"/>
     </Grid>
 </Window>
