--- a/RecrutingAssistant/MainWindow.xaml
+++ b/RecrutingAssistant/MainWindow.xaml
@@ -15,22 +15,23 @@
             <RowDefinition Height="55"/>
             <RowDefinition Height="55"/>
             <RowDefinition Height="55"/>
-            <RowDefinition Height="55"/>
-            <RowDefinition Height="55"/>
+            <RowDefinition Height="41"/>
             <RowDefinition Height="28"/>
+            <RowDefinition Height="39"/>
+            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="88"/>
             <ColumnDefinition Width="123*"/>
             <ColumnDefinition Width="11*"/>
         </Grid.ColumnDefinitions>
-        <DataGrid Name="dgTypeOfWork" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+        <DataGrid Name="dgTypeOfWork" VerticalAlignment="Stretch" Grid.RowSpan="7" Grid.Column="1" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id" Binding="{Binding Path=WorkID}"/>
                 <DataGridTextColumn Header="Название" Binding="{Binding Path=Name}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid Name="dgJobSeeker" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+        <DataGrid Name="dgJobSeeker" VerticalAlignment="Stretch" Grid.RowSpan="7" Grid.Column="1"  Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id" Binding="{Binding Path=SeekerID}"/>
                 <DataGridTextColumn Header="Имя" Binding="{Binding Path=FirstName}"/>
@@ -42,7 +43,7 @@
                 <DataGridTextColumn Header="Тип работы" Binding="{Binding Path=Work.Name}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid Name="dgEmployer" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+        <DataGrid Name="dgEmployer" VerticalAlignment="Stretch" Grid.RowSpan="7" Grid.Column="1"  Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id" Binding="{Binding Path=EmployerID}"/>
                 <DataGridTextColumn Header="Имя" Binding="{Binding Path=Name}"/>
@@ -51,7 +52,7 @@
                 <DataGridTextColumn Header="Тип работы" Binding="{Binding Path=Work.Name}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid Name="dgPosition" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+        <DataGrid Name="dgPosition" VerticalAlignment="Stretch" Grid.RowSpan="7" Grid.Column="1" HorizontalAlignment="Stretch" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id" Binding="{Binding Path=PositionID}"/>
                 <DataGridTextColumn Header="Название" Binding="{Binding Path=PositionName}"/>
@@ -60,7 +61,7 @@
                 <DataGridTextColumn Header="Работодатель" Binding="{Binding Path=Employer.Name}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid Name="dgDeal" VerticalAlignment="Top" Grid.RowSpan="7" Grid.Column="1" Height="350" Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
+        <DataGrid Name="dgDeal" VerticalAlignment="Stretch" Grid.RowSpan="7" Grid.Column="1"  Grid.Row="1" Visibility="Hidden" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id" Binding="{Binding Path=DealID}"/>
                 <DataGridTextColumn Header="Соискатель" Binding="{Binding Path=Seeker.SecondName}"/>
@@ -69,11 +70,11 @@
                 <DataGridTextColumn Header="Комиссионные" Binding="{Binding Path=Commission}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button Name="btnAdd" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="1"  Click="btnAdd_Click" Width="60"  />
-        <Button Name="btnRefresh" Content="Обновить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="2"  Click="btnRefresh_Click"  Width="60"/>
-        <Button Name="btnDelete" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="3"  Click="btnDelete_Click"  Width="60"/>
-        <Button Name="btnEdit" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="4"  Click="btnEdit_Click" Width="60" />
-        <Button Name="btnSearch" Content="Поиск" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="5" Width="60"/>
+        <Button Name="btnAdd" Content="Добавить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="1"  Click="btnAdd_Click" Width="65"  />
+        <Button Name="btnRefresh" Content="Обновить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="2"  Click="btnRefresh_Click"  Width="65"/>
+        <Button Name="btnDelete" Content="Удалить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="3"  Click="btnDelete_Click"  Width="65" />
+        <Button Name="btnEdit" Content="Изменить" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="4"  Click="btnEdit_Click" Width="65" />
+        <Button Name="btnSearch" Content="Поиск" HorizontalAlignment="Center" VerticalAlignment="Center" Height="45" Grid.Column="2" Grid.Row="5" Width="65" />
         <StackPanel Grid.Column="0" Orientation="Vertical" Grid.ColumnSpan="1" VerticalAlignment="Center" Height="45" Grid.Row="1" Margin="0,5">
             <Button HorizontalAlignment="Center" x:Name="btnTypeOfWork" VerticalAlignment="Center" Height="45" Width="70" Click="btnTypeOfWork_Click">
                 <Button.ToolTip>
@@ -133,8 +134,8 @@
             </MenuItem>
             <MenuItem Name="About" Header="О программе"></MenuItem>
         </Menu>
-        <StatusBar Name="statusBar" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Margin="1,0" VerticalAlignment="Bottom" Height="30" Grid.Row="7">
-            <Label Name="statusLabel" Content="Работа с таблицей:" Visibility="Visible"></Label>
+        <StatusBar Name="statusBar" Grid.ColumnSpan="3" HorizontalAlignment="Stretch"  VerticalAlignment="Stretch" Grid.Row="8">
+            <Label Name="statusLabel" Content="Работа с таблицей:" Visibility="Visible" VerticalAlignment="Top"></Label>
         </StatusBar>
     </Grid>
 </Window>
