--- a/RecrutingAssistant/AddDealWindow.xaml
+++ b/RecrutingAssistant/AddDealWindow.xaml
@@ -20,9 +20,9 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Label Content="Соискатель" HorizontalAlignment="Left"  VerticalAlignment="Center" Width="100" Grid.Column="0" Grid.Row="0"/>
-        <ComboBox Name="cbSeeker" HorizontalAlignment="Stretch" VerticalAlignment="Center"  Width="122" Grid.Column="1" Grid.Row="0" ItemsSource="{Binding}" DisplayMemberPath="Seeker"/>
+        <ComboBox Name="cbSeeker" HorizontalAlignment="Stretch" VerticalAlignment="Center"  Width="122" Grid.Column="1" Grid.Row="0" ItemsSource="{Binding}" DisplayMemberPath="FirstName"/>
         <Label Content="Вакансия" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="1" Width="100" VerticalAlignment="Center"/>
-        <ComboBox Name="cbPosition" HorizontalAlignment="Stretch" VerticalAlignment="Center"  Width="122" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding}" DisplayMemberPath="Position"/>
+        <ComboBox Name="cbPosition" HorizontalAlignment="Stretch" VerticalAlignment="Center"  Width="122" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding}" DisplayMemberPath="PositionName"/>
         <Label Content="Дата сделки" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="2" Width="100" VerticalAlignment="Center"/>
         <DatePicker Name="dpDateOfDeal" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Center" Width="122" VerticalAlignment="Stretch" Margin="0,3,0,3"/>
         <Label Content="Комиссионные" HorizontalAlignment="Left" Grid.Column="0" Grid.Row="3" Width="100" VerticalAlignment="Center"/>
